--- a/client/app/components/game/game.less
+++ b/client/app/components/game/game.less
@@ -1,28 +1,29 @@
-body, html {
-    height: 100%;
-}
 .game {
+    background: #eee;
     display: flex;
-    flex-flow: column;
-    padding: 0 10px;
+    flex-flow: row;
     height: 100%;
+    width: 100%;
+}
+
+.game-menu {
+    padding: 0 10px;
+    width: 280px;
 }
 
 .game-header {
-    flex: 1 0 auto;
+
 }
 
 .game-settings {
-    flex: 1 0 auto;
+
 }
 
 .game-field {
-    flex: 1 0 100%;
+    padding: 20px 10px 0;
+    flex: 1;
 }
 
 .game-cards {
-    align-content: stretch;
-    display: flex;
-    flex-flow: row;
-    flex-wrap: wrap;
+    
 }
